add base styles and footer wraps

--- a/lib/css/less/_0up.less
+++ b/lib/css/less/_0up.less
@@ -27,6 +27,22 @@
 /* GENERAL STYLES
 *****************************************************************/
 
+    //overwrite twentytwelve positioning with our own
+        body {
+
+            .site,
+            footer[role="contentinfo"] { 
+                margin: 0;
+                padding: 0;
+                max-width: none;
+            }
+
+            .inner-wrap {
+                max-width: 960px;
+                margin: auto;
+            }
+        }
+
 /* SHELL STYLES
 *****************************************************************/
 
