add custom post type functions

--- a/lib/css/less/_base.less
+++ b/lib/css/less/_base.less
@@ -28,6 +28,11 @@
 *****************************************************************/
 
     //overwrite twentytwelve theme coloring and positioning with our own
+
+        html {
+            background-color: @child-footer-color;//same color as footer as footer doesn't stick to bottom naturally
+        }
+        
         body {
             background-color: @child-background-color;
             
@@ -37,7 +42,7 @@
 
             footer[role="contentinfo"] { background-color: @child-footer-color; }
         }
-        
+
 /* SHELL STYLES
 *****************************************************************/
 
