line up our custom widget areas in the footer

--- a/lib/css/less/_768up.less
+++ b/lib/css/less/_768up.less
@@ -35,6 +35,10 @@
     /*  ******************************** SIDEBAR ********************************  */
     /*  ******************************** FOOTER ********************************  */
 
+        footer .inner-wrap {//line up our custom widget areas in the footer
+            .maudience-flexbox(space-between);//line em up
+        }
+
 /* PLUGIN STYLES
 *****************************************************************/
 
