--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -1,6 +1,213 @@
 /* VARIABLES */
+/* VARIABLES */
 /* MIXINS */
+/*
+
+    MIXINS
+
+*/
+/* USE FLEXBOX FOR ALIGNMENT WHEN POSSIBLE - NO MORE FLOATS*/
 /* BASE */
+/*  BASE 
+
+    This file contains all styles that do not change based on device
+    Use the responsive less files to add positioning styles
+
+    Table of contents
+
+        General Styles
+
+        Shell Styles
+            - Header
+            - Menus and Navigation
+            - Sidebar
+            - Footer
+
+        Plug-in Specific Styles
+            - WooCommerce
+            - Gravity Forms
+
+        Page Specific Styles
+*/
+/* ---------------------------------------------- */
+/* TEMPORARY AND IMPORTANT STYLES (to be removed) *\
+\* ---------------------------------------------- */
+/* GENERAL STYLES
+*****************************************************************/
+html {
+  background-color: white;
+}
+body {
+  background-color: white;
+}
+body .site {
+  box-shadow: none;
+}
+body .site-header {
+  background-color: white;
+}
+body footer[role="contentinfo"] {
+  background-color: white;
+}
+/* SHELL STYLES
+*****************************************************************/
+/*  ******************************** HEADER ********************************  */
+/*  ******************************** MENUS AND NAVIGATION ********************************  */
+/*  ******************************** SIDEBAR ********************************  */
+/*  ******************************** FOOTER ********************************  */
+/* PLUGIN STYLES
+*****************************************************************/
+/*  ******************************** WOOCOMMERCE ********************************  */
+/*  ******************************** GRAVITYFORMS ********************************  */
+/* PAGE SPECIFIC STYLES
+*****************************************************************/
 /* MOBILE - STARTING BOX/POSITION STYLES */
+@media only screen and (min-width: 200px) {
+  /*  0UP RESPONSIVE BASE STYLES
+
+    This file contains all styles that do not change based on device
+    Use the responsive less files to add positioning styles
+
+    Table of contents
+
+        General Styles
+
+        Shell Styles
+            - Header
+            - Menus and Navigation
+            - Sidebar
+            - Footer
+
+        Plug-in Specific Styles
+            - WooCommerce
+            - Gravity Forms
+
+        Page Specific Styles
+*/
+  /* ---------------------------------------------- */
+  /* TEMPORARY AND IMPORTANT STYLES (to be removed) *\
+\* ---------------------------------------------- */
+  /* GENERAL STYLES
+*****************************************************************/
+  body .site,
+  body footer[role="contentinfo"] {
+    margin: 0;
+    padding: 0;
+    max-width: none;
+  }
+  body .inner-wrap {
+    max-width: 960px;
+    margin: auto;
+  }
+  /* SHELL STYLES
+*****************************************************************/
+  /*  ******************************** HEADER ********************************  */
+  /*  ******************************** MENUS AND NAVIGATION ********************************  */
+  /*  ******************************** SIDEBAR ********************************  */
+  /*  ******************************** FOOTER ********************************  */
+  /* PLUGIN STYLES
+*****************************************************************/
+  /*  ******************************** WOOCOMMERCE ********************************  */
+  /*  ******************************** GRAVITYFORMS ********************************  */
+  /* PAGE SPECIFIC STYLES
+*****************************************************************/
+}
 /* TABLET + */
+@media only screen and (min-width: 768px) {
+  /*  768UP TABLET RESPONSIVE STYLES 
+
+    This file contains all styles that do not change based on device
+    Use the responsive less files to add positioning styles
+
+    Table of contents
+
+        General Styles
+
+        Shell Styles
+            - Header
+            - Menus and Navigation
+            - Sidebar
+            - Footer
+
+        Plug-in Specific Styles
+            - WooCommerce
+            - Gravity Forms
+
+        Page Specific Styles
+*/
+  /* ---------------------------------------------- */
+  /* TEMPORARY AND IMPORTANT STYLES (to be removed) *\
+\* ---------------------------------------------- */
+  /* GENERAL STYLES
+*****************************************************************/
+  /* SHELL STYLES
+*****************************************************************/
+  /*  ******************************** HEADER ********************************  */
+  /*  ******************************** MENUS AND NAVIGATION ********************************  */
+  /*  ******************************** SIDEBAR ********************************  */
+  /*  ******************************** FOOTER ********************************  */
+  footer .inner-wrap {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: space-between;
+    -moz-box-pack: space-between;
+    -ms-flex-pack: space-between;
+    -webkit-justify-content: space-between;
+    justify-content: space-between;
+    -webkit-box-align: space-between;
+    -moz-box-align: space-between;
+    -ms-flex-align: space-between;
+    -webkit-align-items: space-between;
+    align-items: space-between;
+  }
+  /* PLUGIN STYLES
+*****************************************************************/
+  /*  ******************************** WOOCOMMERCE ********************************  */
+  /*  ******************************** GRAVITYFORMS ********************************  */
+  /* PAGE SPECIFIC STYLES
+*****************************************************************/
+}
 /* LARGE DESKTOP + */
+@media only screen and (min-width: 768px) {
+  /*  1200UP DESKTOP STYLES 
+
+    This file contains all styles that do not change based on device
+    Use the responsive less files to add positioning styles
+
+    Table of contents
+
+        General Styles
+
+        Shell Styles
+            - Header
+            - Menus and Navigation
+            - Sidebar
+            - Footer
+
+        Plug-in Specific Styles
+            - WooCommerce
+            - Gravity Forms
+
+        Page Specific Styles
+*/
+  /* ---------------------------------------------- */
+  /* TEMPORARY AND IMPORTANT STYLES (to be removed) *\
+\* ---------------------------------------------- */
+  /* GENERAL STYLES
+*****************************************************************/
+  /* SHELL STYLES
+*****************************************************************/
+  /*  ******************************** HEADER ********************************  */
+  /*  ******************************** MENUS AND NAVIGATION ********************************  */
+  /*  ******************************** SIDEBAR ********************************  */
+  /*  ******************************** FOOTER ********************************  */
+  /* PLUGIN STYLES
+*****************************************************************/
+  /*  ******************************** WOOCOMMERCE ********************************  */
+  /*  ******************************** GRAVITYFORMS ********************************  */
+  /* PAGE SPECIFIC STYLES
+*****************************************************************/
+}
