add theme options, update colors, add top and bottom full width columns, add custom post type updated code

--- a/lib/css/less/_base.less
+++ b/lib/css/less/_base.less
@@ -292,7 +292,7 @@
 
         .top-section .column-centerfull {
             height: 515px;
-            background-image: url('../images/collision-repair-center-quad-cities-banner-image-home.png');
+            background-color: lightgrey;
             background-size: cover;
             color: white;
 
