--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
- Theme Name:   [CLIENT NAME] - MAudience Custom Theme
+ Theme Name:   Whitney Monument Works - MAudience Custom Theme
  Theme URI:    http://maudience.com/
- Description:  Custom theme by MAudience
- Author:       MAudience
+ Description:  Custom theme by Maudience
+ Author:       Maudience
  Author URI:   http://maudience.com/
  Template:     twentytwelve
  Version:      1.0.0
